2001-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * coders/wmf.c updated for libwmf 0.2.  Plenty of bugs
          remain within.

2001-10-11  Cristy  <cristy@mystic.es.dupont.com>
	* QueryFontMetrics() of PerlMagick now recognizes embedded
	  special characters (e.g. %h).

2001-10-10  Cristy  <cristy@mystic.es.dupont.com>
	* Fixed seg-fault for PingImage() on a JP2 image file.

2001-10-07  Cristy  <cristy@mystic.es.dupont.com>
	* CloneImage() now uses a referenced counted pixel cache.

2001-10-05  Cristy  <cristy@mystic.es.dupont.com>
	* Added AcquireImagePixels() method.
	* Changed the formal parameter from Image * to const Image *
	  for a number of methods (e.g. ZoomImage()).
	* Added ExceptionInfo parameter to DispatchImage().

2001-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * Find libxml headers under Debian Linux (bug ID 921).

2001-10-02  Cristy  <cristy@mystic.es.dupont.com>
	* Fixed assertion error on drawing stroked text.

2001-10-01  Cristy  <cristy@mystic.es.dupont.com>
	* Added blob test to the PerlMagick test suite.

2001-09-30  Cristy  <cristy@mystic.es.dupont.com>
	* switched strcpy to strncpy to help protect against buffer
	  overflow.
	* ltdl.c passed int reference but a long was needed;
	  caused a fault on Solaris 64-bit compiles.

2001-09-25  Cristy  <cristy@mystic.es.dupont.com>
	* Removed most lint complaints from the source.
	* strtod() returns different results on Linux and Solaris for 0x13.
	* Added a MATLAB encoder contributed by Jaroslav Fojtik.

2001-09-21  Cristy  <cristy@mystic.es.dupont.com>
	* Replaced TemporaryFilename() with UniqueImageFilename().
	* ImageMagick CORE API is now 64-bit clean.

2001-09-20  Cristy  <cristy@mystic.es.dupont.com>
	* Fixed svg.c to accept a viewbox with a negative offset.

2001-09-15  Cristy  <cristy@mystic.es.dupont.com>
	* Surveying the code for 64-bit compatibility.
	* The cloned colormap was too small (reported by Glenn).