@@ -365,7 +365,7 @@ integer</i>, fill=<i><a href="color.html">color name</a></i></td>
  </tr>
   <tr>
  <td>Channel</td>
-  <td>channel={Red, Green, Blue, Matte}</td>
+  <td>channel={Red, Cyan, Green, Magenta, Blue, Yellow, Opacity, Black}</td>
   <td>extract a channel from the image</td>
  </tr>
   <tr>
